--- a/QuestStore3/ClientApp/src/app/Components/nav-menu/nav-menu.component.html
+++ b/QuestStore3/ClientApp/src/app/Components/nav-menu/nav-menu.component.html
@@ -1,4 +1,5 @@
-<header>
+
+ <header>
   <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
     <div class="container">
       <a class="navbar-brand" [routerLink]="['/']">QuestStore3</a>
@@ -11,51 +12,91 @@
               (click)="toggle()">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse"
-           [ngClass]="{ show: isExpanded }">
+           [ngClass]="{ show: isExpanded }" *ngIf="notLogged">
         <ul class="navbar-nav flex-grow">
-          <li class="nav-item" [routerLinkActive]="['link-active']"
-              [routerLinkActiveOptions]="{ exact: true }">
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
-          </li>
-          <!--<li class="nav-item" [routerLinkActive]="['link-active']">
-   <a class="nav-link text-dark" [routerLink]="['/counter']">Counter</a>
-  </li>
-  <li class="nav-item" [routerLinkActive]="['link-active']">
-  <a class="nav-link text-dark" [routerLink]="['/fetch-data']">Fetch data</a>
-  </li>-->
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/overview']">Quests</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/get-bonus']">Bonuses</a>
           </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/get-user']">Users</a>
-          </li>
           <li>
             <div>
               <form class="form-inline" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-                <div class="form-group">
+                <div class="form-group mr-2">
                   <input type="text" class="form-control" placeholder="Enter e-mail" formControlName="email" />
                 </div>
-                <div class="form-group">
+                <div class="form-group mr-2">
                   <input type=password class="form-control" placeholder="Enter password" formControlName="password" />
                 </div>
-                <div class="form-check">
+                <div class="form-check" >
                   <button type="submit" class="btn btn-primary">Login</button>
-                  <div class="column has-text-centered" *ngFor="let board of _userIdentit; let i = index">
-                   {{board}}
-                  </div>
-
                 </div>
               </form>
             </div>
           </li>
-         
-
+          <li class="nav-item">
+            <a class="btn btn-primary" [routerLink]="['/registration']" style="margin-left: 10px">Register</a>
+          </li>
         </ul>
       </div>
+      <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse"
+           [ngClass]="{ show: isExpanded }" *ngIf="admin">
+        <ul class="navbar-nav flex-grow">
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/get-user']">Users</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/overview']">Quests</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/get-bonus']">Bonuses</a>
+          </li>
+          <li>
+          <li class="nav-item">
+            <a class="btn btn-primary" style="margin-left: 10px" (click)="logOut()">Logout</a>
+          </li>
+        </ul>
+      </div>
+      <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse"
+           [ngClass]="{ show: isExpanded }" *ngIf="mentor">
+        <ul class="navbar-nav flex-grow">
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/overview']">Quests</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/get-bonus']">Bonuses</a>
+          </li>
+          <li>
+          <li class="nav-item">
+            <a class="btn btn-primary" style="margin-left: 10px" (click)="logOut()">Logout</a>
+          </li>
+        </ul>
+      </div>
+      <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse"
+           [ngClass]="{ show: isExpanded }" *ngIf="student">
+        <ul class="navbar-nav flex-grow">
+          <li class="nav-item" [routerLinkActive]="['link-active']"
+              [routerLinkActiveOptions]="{ exact: true }">
+            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/overview']">Quests</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/get-bonus']">Bonuses</a>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-primary" style="margin-left: 10px" (click)="logOut()">Logout</a>
+          </li>
+        </ul>
+      </div>
+
+
+
+
     </div>
 
   </nav>
