Registration form added

--- a/QuestStore3/ClientApp/src/app/Components/nav-menu/nav-menu.component.html
+++ b/QuestStore3/ClientApp/src/app/Components/nav-menu/nav-menu.component.html
@@ -38,7 +38,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="btn btn-primary" [routerLink]="['/registration']" style="margin-left: 10px">Register</a>
+            <a class="btn btn-primary" [routerLink]="['/registration']" style="margin-left: 10px">Registration</a>
           </li>
         </ul>
       </div>
