--- a/QuestStore3/ClientApp/src/app/Components/nav-menu/nav-menu.component.html
+++ b/QuestStore3/ClientApp/src/app/Components/nav-menu/nav-menu.component.html
@@ -1,7 +1,7 @@
 
  <header>
   <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-    <div class="container">
+    <div class="container-fluid">
       <a class="navbar-brand" [routerLink]="['/']">QuestStore3</a>
       <button class="navbar-toggler"
               type="button"
@@ -15,33 +15,31 @@
 
       <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse"
            [ngClass]="{ show: isExpanded }" *ngIf="notLogged">
-        <ul class="navbar-nav flex-grow">
+        <ul class="navbar-nav flex-grow-1">
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/overview']">Quests</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/get-bonus']">Bonuses</a>
-          </li>
-          <li>
-            <div>
-              <form class="form-inline" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-                <div class="form-group mr-2">
-                  <input type="text" class="form-control" placeholder="Enter e-mail" formControlName="email" />
-                </div>
-                <div class="form-group mr-2">
-                  <input type=password class="form-control" placeholder="Enter password" formControlName="password" />
-                </div>
-                <div class="form-check" >
-                  <button type="submit" class="btn btn-primary">Login</button>
-                </div>
-              </form>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="btn btn-primary" [routerLink]="['/registration']" style="margin-left: 10px">Registration</a>
+            <a class="nav-link text-dark" [routerLink]="['/get-bonus']">Students</a>
           </li>
         </ul>
       </div>
+      <div>
+        <form class="form-inline" [formGroup]="loginForm" (ngSubmit)="onSubmit()" *ngIf="notLogged">
+          <div class="form-group mr-2">
+            <input type="text" class="form-control" placeholder="Enter e-mail" formControlName="email" />
+          </div>
+          <div class="form-group mr-2">
+            <input type=password class="form-control" placeholder="Enter password" formControlName="password" />
+          </div>
+          <div class="form-check float-right">
+            <button type="submit" class="btn btn-primary">Login</button>
+          </div>
+        </form>
+      </div>
+      <div *ngIf="notLogged" class="btn btn-primary float-right" [routerLink]="['/registration']" style="margin-left: 10px">Registration</div>
+
+
       <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse"
            [ngClass]="{ show: isExpanded }" *ngIf="admin">
         <ul class="navbar-nav flex-grow">
@@ -60,21 +58,27 @@
           </li>
         </ul>
       </div>
+
       <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse"
            [ngClass]="{ show: isExpanded }" *ngIf="mentor">
-        <ul class="navbar-nav flex-grow">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/get-my-students']">My Students</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/get-my-groups']">My Groups</a>
+          </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/overview']">Quests</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
             <a class="nav-link text-dark" [routerLink]="['/get-bonus']">Bonuses</a>
           </li>
-          <li>
-          <li class="nav-item">
-            <a class="btn btn-primary" style="margin-left: 10px" (click)="logOut()">Logout</a>
-          </li>
         </ul>
       </div>
+      <div *ngIf="mentor" class="text-dark" style="margin-left: auto; padding-right: 10px">Hello, {{identity[0]}} {{identity[1]}}</div>
+      <div *ngIf="mentor" class="btn btn-primary float-right" style="margin-left: auto" (click)="logOut()">Logout</div>
+
       <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse"
            [ngClass]="{ show: isExpanded }" *ngIf="student">
         <ul class="navbar-nav flex-grow">
