--- a/QuestStore3/ClientApp/src/app/Components/nav-menu/nav-menu.component.css
+++ b/QuestStore3/ClientApp/src/app/Components/nav-menu/nav-menu.component.css
@@ -1,18 +1,34 @@
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+.navbar {
+  font-family: Montserrat, sans-serif;
+  margin-bottom: 0;
+  background-color: #2d2d30 !important;
+  border: 0;
+  font-size: 14px !important;
+ 
+  opacity: 0.9;
 }
 
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
+  .navbar li a, .navbar .navbar-brand {
+    color: #d5d5d5 !important;
   }
+
+.navbar-nav li a:hover {
+  color: #fff !important;
 }
 
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+.navbar-nav li.active a {
+  color: #fff !important;
+  background-color: #29292c !important;
+}
+
+.navbar-default .navbar-toggle {
+  border-color: transparent;
+}
+
+.nav-tabs li a {
+  color: #777;
+}
+
+.form-control {
+  border-radius: 2px;
 }
