--- a/QuestStore3/ClientApp/src/app/Components/quest/overview/overview.component.html
+++ b/QuestStore3/ClientApp/src/app/Components/quest/overview/overview.component.html
@@ -1,26 +1,29 @@
-<h1 id="tableLabel">Quests</h1>
+<div id="band" class="container-no-homepages text-center">
 
-<p>This component demonstrates all available quests.</p>
+  <h1 id="tableLabel">Quests</h1>
 
-<p *ngIf="!quests"><em>Loading...</em></p>
+  <p>This component demonstrates all available quests.</p>
 
-<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="quests">
-  <thead>
-    <tr>
-      <th>Description</th>
-      <th>Price</th>
-      <th>Amount</th>
+  <p *ngIf="!quests"><em>Loading...</em></p>
 
-
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let quest of quests">
-      <td>{{ quest.description }}</td>
-      <td>{{ quest.price }}</td>
-      <td>{{ quest.amount }}</td>
+  <table class='table table-striped' aria-labelledby="tableLabel" *ngIf="quests">
+    <thead>
+      <tr>
+        <th>Description</th>
+        <th>Price</th>
+        <th>Amount</th>
 
 
-    </tr>
-  </tbody>
-</table>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let quest of quests">
+        <td>{{ quest.description }}</td>
+        <td>{{ quest.price }}</td>
+        <td>{{ quest.amount }}</td>
+
+
+      </tr>
+    </tbody>
+  </table>
+  </div>
