--- a/QuestStore3/ClientApp/src/app/app.component.html
+++ b/QuestStore3/ClientApp/src/app/app.component.html
@@ -1,6 +1,12 @@
-<body>
-  <app-nav-menu></app-nav-menu>
-  <div class="container">
-    <router-outlet></router-outlet>
-  </div>
-</body>
+
+<app-nav-menu></app-nav-menu>
+<div class="container-flex">
+  <router-outlet></router-outlet>
+</div>
+<app-footer></app-footer>
+
+
+
+
+
+
