--- a/QuestStore3/ClientApp/src/app/Components/quest/overview/overview.component.html
+++ b/QuestStore3/ClientApp/src/app/Components/quest/overview/overview.component.html
@@ -1,4 +1,4 @@
-<div id="band" class="container-no-homepages text-center">
+<div class="container-no-homepages">
 
   <h1 id="tableLabel">Quests</h1>
 
@@ -12,6 +12,7 @@
         <th>Description</th>
         <th>Price</th>
         <th>Amount</th>
+        <th>Category</th>
 
 
       </tr>
@@ -21,6 +22,9 @@
         <td>{{ quest.description }}</td>
         <td>{{ quest.price }}</td>
         <td>{{ quest.amount }}</td>
+        <td>{{ quest.category }}</td>
+  
+
 
 
       </tr>
