--- a/QuestStore3/ClientApp/src/styles.css
+++ b/QuestStore3/ClientApp/src/styles.css
@@ -8,9 +8,14 @@ body {
   color: #777;
 }
 
+.identity{
+    color: white;
+    text-decoration: solid;
+}
+
 h3, h4 {
   margin: 10px 0 30px 0;
-/*  letter-spacing: 10px;
+  /*  letter-spacing: 10px;
   font-size: 20px;*/
   color: #111;
 }
@@ -116,10 +121,20 @@ h3, h4 {
   border-bottom-left-radius: 0;
 }
 
-.thumbnail {
+.thumbnail2 {
   padding: 0 0 15px 0;
   border: none;
   border-radius: 0;
+  background-color: white;
+  max-width: 100%;
+  height: auto;
+  border: 1px solid #2d2d30;
+}
+
+.thumbnail {
+  padding: 0 0 15px 0;
+  border: 1px solid #2d2d30;
+  border-radius: 2px;
 }
 
   .thumbnail p {
@@ -127,12 +142,25 @@ h3, h4 {
     color: #555;
   }
 
-.btn {
+  .thumbnail img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
+
+   .badge {
+     background-color: darkgoldenrod;
+     margin-left: 4px;
+     margin-right: 4px;
+     }
+
+  .btn {
   background-color: #333;
   color: #f1f1f1;
   border-radius: 1px;
   transition: .2s;
   font-size: 0.8rem;
+  margin: 3px;
 }
 
   .btn:hover, .btn:focus {
